--- a/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
+++ b/My_Theme_Collection/Calm_and_Peaceful_Street.theme.css
@@ -200,6 +200,14 @@
    border: 2px ridge rgba(0, 0, 0, 0.4);
 }
 
+.protip-1b9XPC {
+  border-top: none;
+}
+
+.autocompleteQuerySymbol-1kyGZ5 {
+  background-color: #789dbf;
+}
+
 .side-8zPYf6 .item-PXvHYJ {
   border-radius: 9px;
 }
@@ -324,13 +332,13 @@
 }
 
 .css-15ejc46-control,
-.css-2yldzf-control,
-.css-1yegjoj-control {
+.css-gvi9bl-control,
+.css-6fzn47-control {
   background-color: rgba(0, 0, 0, 0.3);
   border: none;
 }
-.css-1yegjoj-control:hover,
-.css-2yldzf-control:hover {
+.css-6fzn47-control:hover,
+.css-gvi9bl-control:hover {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -341,12 +349,12 @@
   border-radius: 0px 0px 7px 7px;
 }
 
-.css-12o7ek3-option {
+.css-1yz4bi9-option {
   background-color: #789dbf;
   color: white;
 }
 
-.css-1gnr91b-option {
+.css-rzbxvl-option {
   background-color: #6f9dc8;
   color: white;
 }
@@ -414,8 +422,8 @@
   background-color: rgba(0,0,0,0.6) !important;
 }
 
-.theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] polyline {
-  stroke: #789dbf;
+.theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] path {
+  fill: #789dbf;
 }
 
 .theme-dark .notificationsSound-27jFSh,
@@ -514,6 +522,20 @@
 .theme-dark .root-1gCeng {
     background-color: rgba(0, 0, 0, 0.55);
     box-shadow: none;
+}
+
+.colorHeaderSecondary-3Sp3Ft {
+  color: white;
+}
+
+.input--jS-j2 {
+	background-color: transparent;
+}
+  
+.container-UC8Ug1 {
+	border-radius: 4px;
+	border: 1px solid #789dbf;
+	background-color: rgba(0, 0, 0, .4);
 }
 
 .theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
@@ -802,7 +824,7 @@
 .lighten-2aYaaU {
   opacity: .8;
 }
-.css-mhi7q3-placeholder {
+.css-o3gndj-placeholder {
   color: white;
   opacity: 1;
 }
@@ -1141,8 +1163,8 @@
   border: 2px solid #789dbf;
 }
 
-.theme-dark .jumpToPresentBar-9P20AM,
-.newMessagesBar-mujexs button {
+.theme-dark .jumpToPresentBar-G1R9s6,
+.theme-dark .newMessagesBar-265mhP button {
   background-color: rgba(0,0,0,.9) !important;
 }
 
@@ -1176,7 +1198,7 @@
 .theme-dark .iconForeground-1w5n7R {
   fill: silver;
 }
-.theme-dark .selectorSelected-1_M1WV {
+.theme-dark .selected-1Tbx07 {
   background-color: rgba(0,0,0,.3);
 }
 .selector-2IcQBU {
@@ -1258,7 +1280,11 @@
   box-shadow: none;
 }
 
-.inspector-sdLnLS {
+.emojiItem-14v6tW.emojiItemSelected-1aLkfV {
+  background-color: rgba(0, 0, 0, .4);
+}
+
+.inspector-S2gM3e {
   background: none;
 }
 
@@ -1422,7 +1448,7 @@
   background-color: rgba(0, 0, 0, .26);
 }
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-1ol35X,
+.theme-dark .jumpButton-JkYoYK,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
   background-color: #789dbf; 
@@ -1541,8 +1567,8 @@
   color: white;
 }
 
-.theme-dark .searchHeader-1EzJGH {
-  background-color: transparent;
+.theme-dark .searchHeader-2XoQg7 {
+  color: white; 
   box-shadow: none;
 }
 
@@ -1551,14 +1577,14 @@
   opacity: .6;
 }
 
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl {
   border: none;
 }
-.searchResult-2N9RV4.expanded-ovgtuV {
+.searchResult-9tQ1uo.expanded-w_LCGl {
   border-radius: 12px;
 }
 
-.searchResult-2N9RV4.expanded-ovgtuV,
+.searchResult-9tQ1uo.expanded-w_LCGl,
 .detailsBlock-FoDTGA {
   background: none;
 }
@@ -1568,30 +1594,30 @@
 }
 
 
-.searchResult-2N9RV4 {
+.searchResult-9tQ1uo {
   overflow: visible;
 }
-.theme-dark .searchResult-2N9RV4 .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
   border: 2px solid black;
 }
-.theme-dark .searchResult-2N9RV4 .hit-NLlWXA {
+.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
   background-color: rgba(0,0,0,0.12);
   box-shadow: none;
 }
-.theme-dark .channelSeparator-dTqJ4K:before {
+.theme-dark .channelSeparator-1DOiGt:before {
   border-color: transparent;
 }
-.theme-dark .channelSeparator-1X1FuH .channelName-wvgELL {
+.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
   background-color: #789dbf;
   padding: 7px 4px;
 }
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   background-color: rgba(0,0,0,0.7);
 }
-.theme-dark .searchResult-2N9RV4:after,
-.theme-dark .searchResult-2N9RV4:before {
+.theme-dark .searchResult-9tQ1uo:after,
+.theme-dark .searchResult-9tQ1uo:before {
   background-image: none;
 }
 .container-2Pjhx- {
@@ -1783,8 +1809,8 @@
   border-color: transparent !important;
   background-color: rgba(0,0,0,0.5) !important;
 }
-.theme-dark .checked-3_4uQ9[style*="border-color: rgb(79, 84, 92);"] polyline[stroke] {
-  stroke: white;
+.theme-dark .checked-3_4uQ9[style*="border-color: rgb(79, 84, 92);"] path[fill] {
+  fill: white;
 }
 .theme-dark .tag-2gHSR7 {
   background: #789dbf;
@@ -1912,6 +1938,11 @@
   box-shadow: none;
 }
 
+.guildIcon-3h-1IH {
+  background-color: transparent;
+  color: white;
+}
+
 .navButtonActive-1MkytQ:hover {
   background-color: #6f9dc8;
 }
@@ -2007,7 +2038,7 @@
   fill: #789dbf;
 }
 
-.form-2fGMdU:before,
+.theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
   background: none;
 }
