--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -106,6 +106,14 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 20%;
 }
 
+.protip-1b9XPC {
+    border-top: none;
+}
+  
+.autocompleteQuerySymbol-1kyGZ5 {
+    background-color: #728e3d;
+}
+
 .colorDefault-2K3EoJ.focused-3afm-j {
     background-color: #728e3d;
 }
@@ -202,6 +210,16 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     margin-top: 7px;
 }
 
+.input--jS-j2 {
+	background-color: transparent;
+}
+  
+.container-UC8Ug1 {
+	border-radius: 4px;
+	border: 1px solid #728e3d;
+	background-color: rgba(0, 0, 0, .4);
+}
+
 
 .circleIconButton-jET_ig {
     background-color: #121213;
@@ -228,6 +246,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .root-1gCeng {
     background-color: rgba(0, 0, 0, 0.55);
     box-shadow: none;
+}
+
+.colorHeaderSecondary-3Sp3Ft {
+    color: white;
 }
 
 .theme-dark .header-3ZP1MY {
@@ -352,7 +374,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 7px 7px 0 0;
 }
 
-.css-n57xjs-menu {
+.css-3vaxre-menu {
     background-color: rgba(0, 0, 0, 0.46);
     box-shadow: none;
     color: white;
@@ -360,12 +382,12 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-top: none;
 }
 
-.css-1gnr91b-option {
+.css-rzbxvl-option {
     background-color: rgba(0, 0, 0, 0.6);
     color: #728e3d;
 }
 
-.css-12o7ek3-option {
+.css-1yz4bi9-option {
     background-color: #728e3d;
     color: white;
 }
@@ -406,8 +428,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: rgba(0, 0, 0, 0.75) !important;
 }
 
-.theme-dark .checked-3_4uQ9[style*="border-color"] polyline {
-    stroke: white;
+.theme-dark .checked-3_4uQ9[style*="border-color"] path {
+    fill: white;
 }
 
 
@@ -431,14 +453,14 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: white;
 }
 
-.css-mhi7q3-placeholder {
+.css-o3gndj-placeholder {
     color: white;
     opacity: 1;
 }
 
 .css-15ejc46-control,
-.css-2yldzf-control,
-.css-1yegjoj-control {
+.css-gvi9bl-control,
+.css-6fzn47-control {
     background-color: rgba(0, 0, 0, 0.34);
     border-color: transparent;
 }
@@ -882,7 +904,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     fill: white;
 }
 
-.theme-dark .selectorSelected-1_M1WV {
+.theme-dark .selected-1Tbx07 {
     background: linear-gradient(45deg, #728e3d 0%, transparent 40%);
 }
 
@@ -1209,6 +1231,10 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     height: 1.21rem;
 }
 
+.emojiItem-14v6tW.emojiItemSelected-1aLkfV {
+    background-color: rgba(0, 0, 0, .4);
+}
+
 .reactionCount-2mvXRV,
 .reaction-1hd86g:hover .reactionCount-2mvXRV {
     color: silver;
@@ -1247,7 +1273,11 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 6px;
 }
 
-.theme-dark .searchHeader-1EzJGH,
+.theme-dark .searchHeader-2XoQg7 {
+    color: white; 
+    box-shadow: none;
+}
+
 .theme-dark .header-ykumBX {
     background-color: transparent;
     box-shadow: none;
@@ -1272,8 +1302,8 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     box-shadow: none;
 }
 
-.theme-dark .searchHeader-1EzJGH .tab-EiCZG6, 
-.theme-dark .searchHeader-1EzJGH .totalResults-1yK_Ym,
+.theme-dark .searchHeader-2XoQg7 .tab-EiCZG6, 
+.theme-dark .searchHeader-2XoQg7 .totalResults-1yK_Ym,
 .theme-dark .header-ykumBX .title-3pkaKd,
 .theme-dark .channelName-3kBz6H,
 .theme-dark .mentionFilter-1PQ6ey .value-2k8Drt,
@@ -1309,7 +1339,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 
 
-.theme-dark .searchHeader-1EzJGH .tab-EiCZG6.selected-16te-P, .theme-dark .searchHeader-1EzJGH .tab-EiCZG6:hover {
+.theme-dark .searchHeader-2XoQg7 .tab-EiCZG6.selected-16te-P, .theme-dark .searchHeader-2XoQg7 .tab-EiCZG6:hover {
     border-bottom: 2px solid #728e3d;
 }
 
@@ -1317,33 +1347,33 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     opacity: .7;
 }
 
-.channelSeparator-dTqJ4K:before {
+.channelSeparator-1DOiGt:before {
     border-bottom: none;
 }
 
-.theme-dark .channelSeparator-1X1FuH .channelName-wvgELL {
+.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
     background-color: #728e3d;
 }
   
-.channelName-wvgELL {
+.channelName-1JRO3C {
     padding: 12px;
 }
 
-.searchResult-2N9RV4:after, 
-.searchResult-2N9RV4:before {
+.searchResult-9tQ1uo:after, 
+.searchResult-9tQ1uo:before {
     display: none;
 }
 
-.theme-dark .searchResult-2N9RV4 .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
     border: none;
 }
   
-.theme-dark .searchResult-2N9RV4 .hit-NLlWXA {
+.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
     background-color: #1e2024;
     box-shadow: none;
 }
   
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
     border: none;
     background-color: black;
 }
@@ -1353,7 +1383,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: rgba(0, 0, 0, .26);
 }
 
-.theme-dark .jumpButton-1ol35X,
+.theme-dark .jumpButton-JkYoYK,
 .theme-dark .jumpButton-3DTcS_,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
@@ -1361,17 +1391,17 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     color: #728e3d !important;
 }
 
-.theme-dark .jumpToPresentBar-9P20AM {
+.theme-dark .jumpToPresentBar-G1R9s6 {
     background-color: rgba(0, 0, 0, 0.4) !important;
 }
  
-.newMessagesBar-mujexs {
+.theme-dark .newMessagesBar-265mhP {
     border-radius: 0 0 11px 11px;
     background-color: rgba(0, 0, 0, 0.4) !important;
 }
  
-.newMessagesBar-mujexs button:last-child,
-.jumpToPresentBar-9P20AM button:last-child {
+.theme-dark .newMessagesBar-265mhP button:last-child,
+.jumpToPresentBar-G1R9s6 button:last-child {
     color: white;
   }
 
@@ -1415,7 +1445,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     margin-left: 5px;
 }
 
-.searchResult-2N9RV4.expanded-ovgtuV {
+.searchResult-9tQ1uo.expanded-w_LCGl {
     border: none;
     background: none;
 }
@@ -1435,7 +1465,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     left: 5px;
 }
 
-.searchResult-2N9RV4.expanded-ovgtuV {
+.searchResult-9tQ1uo.expanded-w_LCGl {
     border: none;
     background: none;
 }
@@ -1585,7 +1615,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background: linear-gradient(45deg, #728e3d 0%, #212121 67%);
 }
 
-.inspector-sdLnLS {
+.inspector-S2gM3e {
     background: none;
 }
 
@@ -1598,6 +1628,11 @@ body, div, span, textarea, ::-webkit-input-placeholder {
   color: white;
 }
 
+
+.guildIcon-3h-1IH {
+    background-color: transparent;
+    color: white;
+}
 
 .navButtonActive-1MkytQ {
     background: #0e0e0e;
@@ -2288,7 +2323,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     fill: #728e3d;
 }
   
-.form-2fGMdU:before,
+.theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
     background: none;}
   
