--- a/My_Theme_Collection/AkameGaKill.theme.css
+++ b/My_Theme_Collection/AkameGaKill.theme.css
@@ -29,6 +29,13 @@
   color: #fff;
 }
 
+.protip-1b9XPC {
+  border-top: none;
+}
+.autocompleteQuerySymbol-1kyGZ5 {
+  background-color: #78152E;
+}
+
 .sidebar-CFHs9e {
   width: 318px;
   padding: 60px 56px 60px 60px;
@@ -71,6 +78,10 @@
   box-shadow: none;
 }
 
+.colorHeaderSecondary-3Sp3Ft {
+  color: white;
+}
+
 .backdrop-1wrmKB, .backdropWithLayer-3_uhz4 {
   background-color: rgba(0, 0, 0, .26) !important;
   opacity: .4 !important;
@@ -86,6 +97,16 @@
   border: none;
 }
 
+.input--jS-j2 {
+  background-color: transparent;
+}
+
+.container-UC8Ug1 {
+  border-radius: 4px;
+  border: 1px solid #9b2742;
+  background-color: rgba(0, 0, 0, .4);
+}
+
 .avatarUploaderInner-3UNxY3 {
   border-radius: 6px;
   background-color: #9b2742;
@@ -95,8 +116,8 @@
   border-radius: 6px;
 }
 
-.css-1yegjoj-control,
-.css-2yldzf-control {
+.css-6fzn47-control,
+.css-gvi9bl-control {
   background-color: rgba(0, 0, 0, 0.4);
   border-color: #9b2742;
 }
@@ -109,7 +130,7 @@
   border-color: #9b2742;
 }
 
-.css-12o7ek3-option,
+.css-1yz4bi9-option,
 .theme-dark .optionActive-KkAdqq {
   background-color: #9b2742;
   color: white;
@@ -120,7 +141,7 @@
   color: white;
 }
 
-.css-1gnr91b-option {
+.css-rzbxvl-option {
   background-color: rgba(155, 39, 66, .7);
   color: white;
 }
@@ -168,8 +189,8 @@
   border-color: #939393;
 }
 
-.theme-dark .checked-3_4uQ9[style*="border-color"] polyline {
-  stroke: white;
+.theme-dark .checked-3_4uQ9[style*="border-color"] path {
+  fill: white;
 }
 
 .lookFilled-1Gx00P.colorGreen-29iAKY, .lookFilled-1Gx00P.colorGreen-29iAKY:disabled,
@@ -350,7 +371,7 @@
   color: white !important;
 }
 
-.css-mhi7q3-placeholder {
+.css-o3gndj-placeholder {
   color: white;
   opacity: 1;
 }
@@ -868,7 +889,12 @@
   background-color: #9b2742 !important;
 }
 
-.barBase-39XTcM {
+.jumpToPresentBar-G1R9s6 {
+  opacity: 1;
+  background-color: rgb(0, 0, 0, .5);
+}
+
+.newMessagesBar-265mhP {
   opacity: .85;
   background-color: #9b2742;
 }
@@ -1133,7 +1159,7 @@
   color: white;
 }
 
-.children-19S4PO:after, .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
+.children-19S4PO:after, .theme-dark .form-2fGMdU:before, .theme-dark .option-96V44q.selected-rZcOL-:after,
 .theme-dark .option-96V44q:after, .divider-3FBTu8 {
   background: none;
 }
@@ -1289,7 +1315,7 @@
   color: white;
 }
 
-.searchHeader-1EzJGH {
+.searchHeader-2XoQg7 {
   color: #9b9b9b;
   box-shadow: none;
 }
@@ -1304,11 +1330,11 @@
 }
 
 
-.channelSeparator-dTqJ4K:before {
+.channelSeparator-1DOiGt:before {
   border: none;
 }
 
-.channelName-wvgELL {
+.channelName-1JRO3C {
   padding: 10px 17px;
   color: white;
   background: #9b2742;
@@ -1317,22 +1343,22 @@
   margin-top: 5px;
 }
 
-.searchResult-2N9RV4:before, .searchResult-2N9RV4:after {
+.searchResult-9tQ1uo:before, .searchResult-9tQ1uo:after {
   background: none;
 }
 
-.searchResultMessage-30QnSN.hit-1CXhXT {
+.searchResultMessage-1fxgXh.hit-1fVM9e {
   box-shadow: none;
   background-color: rgba(0, 0, 0, .23);
   border: none;
   border-radius: 6px;
 }
 
-.searchResultMessage-30QnSN {
+.searchResultMessage-1fxgXh {
   overflow: visible;
 }
 
-.jumpButton-1ol35X, .jumpButton-3DTcS_, .jumpButton-2dvRSC {
+.jumpButton-JkYoYK, .jumpButton-3DTcS_, .jumpButton-2dvRSC {
   border-radius: 6px;
   padding: 4px 13px;
   background-color: #9b2742;
@@ -1345,12 +1371,12 @@
   background-color: rgba(0, 0, 0, .26);
 }
 
-.searchResult-2N9RV4.expanded-ovgtuV {
+.searchResult-9tQ1uo.expanded-w_LCGl {
   border: none;
   background: none;
 }
 
-.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
+.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
   background-color: rgba(0, 0, 0, .46);
   border-color: transparent;
 }
@@ -1502,6 +1528,11 @@
   box-shadow: none;
 }
 
+.guildIcon-3h-1IH {
+  background-color: transparent;
+  color: white;
+}
+
 
 .navButtonActive-1MkytQ:hover {
   background: #ad3950;
@@ -1528,6 +1559,10 @@
   background: linear-gradient(342deg, rgba(0,0,0,1) 10%, #9b2742 100%);
 }
 
+.emojiItem-14v6tW.emojiItemSelected-1aLkfV {
+  background-color: rgba(0, 0, 0, .4);
+}
+
 .emojiPicker-3PwZFl .header-8ilj5e {
   box-shadow: none;
 }
@@ -1548,7 +1583,7 @@
   background-color: rgba(0, 0, 0, .3);
 }
 
-.inspector-sdLnLS, .wrapper-2Gsate {
+.inspector-S2gM3e, .wrapper-2Gsate {
   background: none;
 }
 
@@ -1599,7 +1634,7 @@
   border-radius: 4px;
 }
 
-.theme-dark .selectorSelected-1_M1WV {
+.theme-dark .selected-1Tbx07 {
   background-color: #ad3950;
 }
 
@@ -1638,20 +1673,6 @@
   background: none;
   box-shadow: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 .headerXbox-3G-4PF, .topSectionXbox-3fWLjS, .body-3ND3kc, .headerSpotify-zpWxgT, .theme-dark .bodyInner-245q0L, .theme-dark .footer-1fjuF6,
@@ -1908,6 +1929,8 @@
   padding: 1px 0;
 }
 
+
+
 .partyMember-1CzxeX {
   margin-right: 2px;
 }
@@ -2131,7 +2154,7 @@
   box-shadow: none;
 }
 
-.css-n57xjs-menu {
+.css-3vaxre-menu {
   background-color: rgba(0, 0, 0, 0.76);
   box-shadow: none;
   color: white;
@@ -2190,7 +2213,7 @@
 .standardSidebarView-3F1I7i a, .imageDetails-1t6Zms a, .primary-jw0I4K a, .footer-3rDWdC a, .lookLink-9FtZy-.colorLink-35jkBc,
 .bda-slist .bda-footer a, .markup-2BOw-j a, .welcomeMessage-ULm0mo a, .theme-dark .filenameLinkWrapper-1-14c5, .theme-dark .filenameLinkWrapper-1-14c5 a,
 .topic-TCb_qw a, .emptyStateCTA-veJ2Cu a, .helpText-h3r3wC a, .colorStandard-2KCXvj a,
-.editChannelButton-1dYN-G {
+.editChannelButton-1dYN-G, .fakeLink-26oLcc {
   color: lightgreen;
 }
 
