--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -108,6 +108,14 @@
     background-color: #731838;
 }
 
+.protip-1b9XPC {
+    border-top: none;
+}
+
+.autocompleteQuerySymbol-1kyGZ5 {
+    background-color: #731838;
+}
+
 .h5-18_1nd,
 .theme-dark .userSettingsAccount-2eMFVR .viewBody-2Qz-jg {
     color: white;
@@ -445,13 +453,13 @@
 }
 
 .css-15ejc46-control,
-.css-1yegjoj-control {
+.css-6fzn47-control {
     background-color: rgba(115, 24, 56, 0.37);
     border-color: transparent;
     border-radius: 6px;
 }
 
-.css-2yldzf-control {
+.css-gvi9bl-control {
     background-color: rgba(115, 24, 56, 0.37);
     border-color: transparent;
     border-radius: 6px 6px 0 0;
@@ -465,12 +473,12 @@
     border-color: transparent;
 }
 
-.css-1gnr91b-option {
+.css-rzbxvl-option {
     background-color: #7f2542;
     color: white;
 }
 
-.css-12o7ek3-option {
+.css-1yz4bi9-option {
     background-color: #4d1627;
     color: white;
 }
@@ -522,8 +530,8 @@
     background-color: #4d1627 !important;
 }
 
-.theme-dark .checked-3_4uQ9[style*="border-color"] polyline[stroke] {
-    stroke: white;
+.theme-dark .checked-3_4uQ9[style*="border-color"] path[fill] {
+    fill: white;
 }
 
 .theme-dark .userSettingsVoice-iwdUCU .previewOverlay-2O7_KC {
@@ -632,6 +640,20 @@
 .theme-dark .root-1gCeng {
     background-color: rgba(0, 0, 0, 0.55);
     box-shadow: none;
+}
+
+.colorHeaderSecondary-3Sp3Ft {
+    color: white;
+}
+
+.input--jS-j2 {
+	background-color: transparent;
+}
+  
+.container-UC8Ug1 {
+	border-radius: 4px;
+	border: 1px solid #731838;
+	background-color: rgba(0, 0, 0, .4);
 }
 
 .theme-dark #bd-settingspane-container .ui-switch-item .style-description {
@@ -826,7 +848,7 @@
     border-radius: 50px;
 }
 
-.css-mhi7q3-placeholder {
+.css-o3gndj-placeholder {
     color: white;
     opacity: 1;
 }
@@ -912,13 +934,13 @@
     color: white !important;
 }
 
-.newMessagesBar-mujexs,
-.jumpToPresentBar-9P20AM {
+.theme-dark .newMessagesBar-265mhP,
+.jumpToPresentBar-G1R9s6 {
     background-color: rgba(0,0,0,0.33);
 }
 
-.newMessagesBar-mujexs:hover,
-.jumpToPresentBar-9P20AM:hover {
+.theme-dark .newMessagesBar-265mhP:hover,
+.jumpToPresentBar-G1R9s6:hover {
     background-color: rgba(0,0,0,0.73);
 }
 
@@ -1085,7 +1107,7 @@
     background-color: transparent;
 }
 
-.theme-dark .selectorSelected-1_M1WV {
+.theme-dark .selected-1Tbx07 {
     background-color: #7f2542;
 }
 
@@ -1270,47 +1292,47 @@
     background: linear-gradient(270deg, rgb(115, 24, 56, .7) 0%, rgb(77, 22, 39, .3) 100%);
 }
 
-.theme-dark .searchHeader-1EzJGH {
-    background-color: transparent;
+.theme-dark .searchHeader-2XoQg7 {
+    color: white; 
     box-shadow: none;
 }
 
-.theme-dark .channelSeparator-dTqJ4K:before {
+.theme-dark .channelSeparator-1DOiGt:before {
     border-color: transparent;
 }
 
-.theme-dark .searchResult-2N9RV4:before,
-.theme-dark .searchResult-2N9RV4:after {
+.theme-dark .searchResult-9tQ1uo:before,
+.theme-dark .searchResult-9tQ1uo:after {
     background: none;
 }
 
-.theme-dark .channelSeparator-1X1FuH .channelName-wvgELL {
+.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
     color: #fff;
     background: linear-gradient(270deg, #731838 0%, #4d1627 100%);
     margin-top: 12px;
     padding: 8px;
 }
 
-.theme-dark .searchResult-2N9RV4 .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
     border: 2px solid #7f2542;
 }
 
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl {
     border: 2px solid #7f2542;
     background-color: rgba(0, 0, 0, .46);
 }
 
-.theme-dark .searchResult-2N9RV4 .hit-NLlWXA {
+.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
     background-color: #731838;
     box-shadow: none;
 }
 
-.theme-dark .jumpButton-1ol35X {
+.theme-dark .jumpButton-JkYoYK {
     background-color: rgba(0, 0, 0, .4);
     color: white;
 }
 
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
     border: none;
     background-color: #4d1627;
 }
@@ -1443,7 +1465,10 @@
     background-color: transparent;
 }
 
-
+.guildIcon-3h-1IH {
+    background-color: transparent;
+    color: white;
+}
 
 .navButtonActive-1MkytQ {
     background: #4d1627; 
@@ -1468,7 +1493,7 @@
 	background-color: #4d1627;
 }
 
-.inspector-sdLnLS {
+.inspector-S2gM3e {
     background: none;
 }
 .colorDefault-2K3EoJ .checkbox-3s5GYZ, 
@@ -1496,6 +1521,10 @@
 .contentWrapper-SvZHNd .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S,
 .emote-container:hover {
     background-color: rgba(127, 37, 65, 0.44);
+}
+
+.emojiItem-14v6tW.emojiItemSelected-1aLkfV {
+    background-color: rgba(0, 0, 0, .4);
 }
 
 
@@ -1965,7 +1994,7 @@
 }
 
 
-.css-n57xjs-menu {
+.css-3vaxre-menu {
     background-color: rgba(0,0,0,0.5);
     box-shadow: none;
     color: white;
@@ -2265,7 +2294,7 @@
   fill: #731838;
 }
 
-.form-2fGMdU:before,
+.theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
   background: none;
 }
