--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -17,6 +17,8 @@
     color: white;
 }
 
+
+
 .theme-dark .username-1A8OIy[style*="color: rgb(1, 1, 1)"],
 .theme-dark .username-1A8OIy[style*="color: rgb(2, 2, 2)"],
 .theme-dark .username-1A8OIy[style*="color: rgb(3, 3, 3)"],
@@ -141,6 +143,14 @@
 .cardPrimary-1Hv-to, 
 .cardPrimaryEditable-3KtE4g {
     border-color: #f4acc5;
+}
+
+.protip-1b9XPC {
+    border-top: none;
+}
+  
+.autocompleteQuerySymbol-1kyGZ5 {
+    background-color: #f4acc5;
 }
 
 .cardPrimary-1Hv-to {
@@ -441,9 +451,9 @@
     border-color: rgba(255,255,255,.3) !important;
 }
 
-.theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"] polyline[stroke],
-.theme-dark .checkbox-1ix_J3[style*="border-color: rgb(79, 84, 92);"] polyline[stroke] {
-    stroke: white;
+.theme-dark .checkbox-1ix_J3[style*="border-color: rgb(114, 137, 218);"] path[fill],
+.theme-dark .checkbox-1ix_J3[style*="border-color: rgb(79, 84, 92);"] path[fill] {
+    fill: white;
 }
 
 .inner-2Y6JuD {
@@ -527,7 +537,7 @@
 }
 
 .theme-dark .lookFilled-1h1y05.select-1Pkeg4,
-.css-2yldzf-control {
+.css-gvi9bl-control {
     background-color: rgba(0,0,0,.5);
     border-color: transparent;
 }
@@ -539,7 +549,7 @@
 
 .theme-dark .lookFilled-1h1y05.select-1Pkeg4:hover,
 .css-15ejc46-control:hover,
-.css-2yldzf-control:hover {
+.css-gvi9bl-control:hover {
     border-color: black;
 }
 
@@ -554,13 +564,13 @@
 }
 
 .theme-dark .optionActive-KkAdqq,
-.css-12o7ek3-option {
+.css-1yz4bi9-option {
     color: white;
     background: rgba(0,0,0,.4);
 }
 
 .theme-dark .optionNormal-12VR9V:hover,
-.css-1gnr91b-option {
+.css-rzbxvl-option {
     background-color: rgba(0,0,0,.23);
 }
 
@@ -649,6 +659,10 @@
     box-shadow: none;
 }
 
+.colorHeaderSecondary-3Sp3Ft {
+    color: white;
+}
+
 .uploadArea-3QgLtW {
     background: rgba(0,0,0,.8);
 }
@@ -677,6 +691,16 @@
     border-radius: 5px;
 }
 
+.input--jS-j2 {
+    background-color: transparent;
+}
+    
+.container-UC8Ug1 {
+    border-radius: 4px;
+    border: 1px solid #f4acc5;
+    background-color: rgba(0, 0, 0, .4);
+}
+
 .theme-dark .uploadModal-2ifh8j .inner-3nWsbo .file-34mY5K .icon-kyxXVr.image-2yrs5j {
     background-color: #f4acc5;
     border: 3px solid black;
@@ -700,7 +724,7 @@
     fill: white;
 }
 
-.theme-dark .selectorSelected-1_M1WV {
+.theme-dark .selected-1Tbx07 {
     background: linear-gradient(45deg, #f4acc5 0%, transparent 80%);
 }
 
@@ -1207,7 +1231,7 @@
     box-shadow: none;
 }
 
-.css-n57xjs-menu {
+.css-3vaxre-menu {
     background-color: rgba(0, 0, 0, 0.13);
     box-shadow: none;
     color: white;
@@ -1324,7 +1348,7 @@
     color: white;
 }
 
-.css-mhi7q3-placeholder {
+.css-o3gndj-placeholder {
     color: white;
     opacity: 1;
 }
@@ -1443,17 +1467,17 @@
     box-shadow: none;
 }
 
-.theme-dark .jumpToPresentBar-9P20AM {
+.theme-dark .jumpToPresentBar-G1R9s6 {
     background-color: rgba(0, 0, 0, 0.4) !important;
 }
  
-.newMessagesBar-mujexs {
+.theme-dark .newMessagesBar-265mhP {
     border-radius: 0 0 11px 11px;
     background-color: rgba(0, 0, 0, 0.4) !important;
 }
  
-.newMessagesBar-mujexs button:last-child,
-.jumpToPresentBar-9P20AM button:last-child {
+.theme-dark .newMessagesBar-265mhP button:last-child,
+.jumpToPresentBar-G1R9s6 button:last-child {
     color: white;
 }
 
@@ -1533,7 +1557,7 @@
 }
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .jumpButton-1ol35X,
+.theme-dark .jumpButton-JkYoYK,
 .theme-dark .collapseButton-oSNpPX,
 .jumpButton-2dvRSC {
     background-color: #f4acc5;
@@ -1622,7 +1646,7 @@
     border-radius: 5px;
 }
 
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl {
     border: none;
     background-color: rgba(0, 0, 0, .3);
 }
@@ -1701,8 +1725,7 @@
     color: white;
 } 
 
-.theme-dark .searchHeader-1EzJGH {
-    background-color: transparent;
+.theme-dark .searchHeader-2XoQg7 {
     box-shadow: none;
     color: white;
 }
@@ -1711,33 +1734,33 @@
     background: linear-gradient(135deg, #f4acc5 0%, #000000 100%);
 } 
 
-.theme-dark .channelSeparator-dTqJ4K:before {
+.theme-dark .channelSeparator-1DOiGt:before {
     border-color: transparent;
 }
 
-.theme-dark .channelSeparator-1X1FuH .channelName-wvgELL {
+.theme-dark .channelSeparator-1X1FuH .channelName-1JRO3C {
     background-color: transparent;
     border: 2px solid black;
     padding: 12px;
     border-bottom: none;
 }
 
-.theme-dark .searchResult-2N9RV4:before,
-.theme-dark .searchResult-2N9RV4:after {
+.theme-dark .searchResult-9tQ1uo:before,
+.theme-dark .searchResult-9tQ1uo:after {
     background-image: none;
 }
 
-.theme-dark .searchResult-2N9RV4 .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo .searchResultMessage-1fxgXh.hit-1fVM9e {
     border: none;
 }
 
-.theme-dark .searchResult-2N9RV4 .hit-NLlWXA {
+.theme-dark .searchResult-9tQ1uo .hit-NLlWXA {
     background-color: rgba(0, 0, 0, 0.39);
     box-shadow: none;
     opacity: 0.7;
 }
 
-.theme-dark .searchResult-2N9RV4.expanded-ovgtuV .searchResultMessage-30QnSN.hit-1CXhXT {
+.theme-dark .searchResult-9tQ1uo.expanded-w_LCGl .searchResultMessage-1fxgXh.hit-1fVM9e {
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     background-color: black;
@@ -2178,6 +2201,11 @@
 
 /* Emote Section */
 
+.guildIcon-3h-1IH {
+    background-color: transparent;
+    color: white;
+}
+
 .navButtonActive-1MkytQ {
     background: rgba(0, 0, 0, 0.79);
     border-left: none;
@@ -2202,10 +2230,13 @@
     background: linear-gradient(135deg, #f4acc5 0%, #000000 100%);
 }
 
-.inspector-sdLnLS {
+.inspector-S2gM3e {
     background: none;
 }
 
+.emojiItem-14v6tW.emojiItemSelected-1aLkfV {
+    background-color: rgba(0, 0, 0, .4);
+}
 
 .emojiPicker-3PwZFl .header-8ilj5e {
     border: none;
@@ -2285,7 +2316,7 @@
     fill: #f4acc5;
 }
   
-.theme-dark .form-2fGMdU:before,
+.theme-dark .theme-dark .form-2fGMdU:before,
 .separator-42rNt0 {
     background: none;}
   
